--- a/Klinik.Web/Klinik.Web.csproj
+++ b/Klinik.Web/Klinik.Web.csproj
@@ -483,6 +483,7 @@
     <Content Include="Content\jquery-ui.css" />
     <Content Include="Content\jquery-ui.structure.css" />
     <Content Include="Content\jquery-ui.theme.css" />
+    <Content Include="Content\jquery.timepicker.css" />
     <Content Include="Content\Login\css\login.css" />
     <Content Include="Content\Login\css\util.css" />
     <Content Include="Content\Login\fonts\font-awesome-4.7.0\css\font-awesome.css" />
@@ -754,6 +755,7 @@
     <Content Include="Scripts\jquery-ui.js" />
     <Content Include="Scripts\jquery.signalR-2.4.0.js" />
     <Content Include="Scripts\jquery.signalR-2.4.0.min.js" />
+    <Content Include="Scripts\jquery.timepicker.js" />
     <Content Include="Scripts\toastr.js" />
     <Content Include="Scripts\toastr.min.js" />
     <Content Include="Views\favicon.ico" />
@@ -1150,6 +1152,8 @@
     <Content Include="Views\Registration\PoliUmum.cshtml" />
     <Content Include="Views\MasterData\ParamedicList.cshtml" />
     <Content Include="Views\MasterData\CreateOrEditParamedic.cshtml" />
+    <Content Include="Views\PoliSchedule\Master.cshtml" />
+    <Content Include="Views\PoliSchedule\CreateOrEditPoliScheduleMaster.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
