--- a/Klinik.Features/Klinik.Features.csproj
+++ b/Klinik.Features/Klinik.Features.csproj
@@ -116,6 +116,10 @@
     <Compile Include="MasterData\User\UserRequest.cs" />
     <Compile Include="MasterData\User\UserResponse.cs" />
     <Compile Include="MasterData\User\UserValidator.cs" />
+    <Compile Include="Patients\Pasien\PatientHandler.cs" />
+    <Compile Include="Patients\Pasien\PatientRequest.cs" />
+    <Compile Include="Patients\Pasien\PatientResponse.cs" />
+    <Compile Include="Patients\Pasien\PatientValidator.cs" />
     <Compile Include="PoliScheduleMaster\PoliScheduleMasterHandler.cs" />
     <Compile Include="PoliScheduleMaster\PoliScheduleMasterRequest.cs" />
     <Compile Include="PoliScheduleMaster\PoliScheduleMasterResponse.cs" />
@@ -142,6 +146,10 @@
     <ProjectReference Include="..\Klinik.Entities\Klinik.Entities.csproj">
       <Project>{0a81b9b4-7d64-412d-8e86-8ae9d22cf53f}</Project>
       <Name>Klinik.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Klinik.Interfaces\Klinik.Interfaces.csproj">
+      <Project>{6604e37f-d994-4395-ada9-6c5a0a561857}</Project>
+      <Name>Klinik.Interfaces</Name>
     </ProjectReference>
     <ProjectReference Include="..\Klinik.Resources\Klinik.Resources.csproj">
       <Project>{3d1a8222-cc25-4bb0-8820-f26c53aa9e8d}</Project>
