--- a/Klinik.Web/packages.config
+++ b/Klinik.Web/packages.config
@@ -4,6 +4,8 @@
   <package id="AutoMapper" version="8.0.0" targetFramework="net461" />
   <package id="bootstrap" version="4.2.1" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
+  <package id="Datalist" version="6.2.1" targetFramework="net461" />
+  <package id="Datalist.Core" version="6.2.1" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net461" />
   <package id="jQuery" version="3.0.0" targetFramework="net461" />
@@ -39,6 +41,7 @@
   <package id="popper.js" version="1.14.0" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
   <package id="Select2.js" version="4.0.5" targetFramework="net461" />
+  <package id="System.Linq.Dynamic" version="1.0.7" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="toastr" version="2.1.1" targetFramework="net461" />
