Update registration logic

--- a/Klinik.Common/Klinik.Common.csproj
+++ b/Klinik.Common/Klinik.Common.csproj
@@ -86,6 +86,7 @@
     <Compile Include="CustomAuthorizeAttribute.cs" />
     <Compile Include="Enumerations\ClinicEnums.cs" />
     <Compile Include="Enumerations\ParamedicTypeEnum.cs" />
+    <Compile Include="Enumerations\PoliEnum.cs" />
     <Compile Include="Enumerations\RegistrationStatusEnum.cs" />
     <Compile Include="Enumerations\RegistrationTypeEnum.cs" />
     <Compile Include="Extensions.cs" />
