--- a/Klinik.Web/Klinik.Web.csproj
+++ b/Klinik.Web/Klinik.Web.csproj
@@ -1460,10 +1460,8 @@
     <Content Include="Views\Doctor\Create.cshtml" />
     <Content Include="Views\Doctor\Index.cshtml" />
     <Content Include="Views\Doctor\Edit.cshtml" />
-
     <Content Include="Views\Patient\PasienList.cshtml" />
-    <Content Include="Views\Patient\CreateNewPatient.cshtml" />
-
+    <Content Include="Views\Patient\Create.cshtml" />
     <Content Include="Views\Administration\Logging.cshtml" />
     <Content Include="Views\Paramedic\Index.cshtml" />
     <Content Include="Views\Paramedic\Create.cshtml" />
