Added static content config

--- a/Klinik.Web/Web.config
+++ b/Klinik.Web/Web.config
@@ -42,6 +42,10 @@
     <modules>
       <remove name="FormsAuthentication" />
     </modules>
+    <staticContent>
+      <remove fileExtension=".woff"/>
+      <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
+    </staticContent>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
