--- a/Klinik.Web/Klinik.Web.csproj
+++ b/Klinik.Web/Klinik.Web.csproj
@@ -1400,7 +1400,7 @@
     <Content Include="Views\Doctor\Index.cshtml" />
     <Content Include="Views\Doctor\Edit.cshtml" />
     <Content Include="Views\Patient\PasienList.cshtml" />
-    <Content Include="Views\Patient\Create.cshtml" />
+    <Content Include="Views\Patient\CreateOrEditPatient.cshtml" />
     <Content Include="Views\Administration\Logging.cshtml" />
     <Content Include="Views\Paramedic\Index.cshtml" />
     <Content Include="Views\Paramedic\Create.cshtml" />
