--- a/Klinik.Entities/Klinik.Entities.csproj
+++ b/Klinik.Entities/Klinik.Entities.csproj
@@ -77,7 +77,6 @@
     <Compile Include="Form\FormExamineServiceModel.cs" />
     <Compile Include="Form\FormExamineLabModel.cs" />
     <Compile Include="Form\FormExamineModel.cs" />
-    <Compile Include="Form\FormPreExamineModel.cs" />
     <Compile Include="Form\FormMedicalModel.cs" />
     <Compile Include="MappingMaster\OrganizationPrivilegeModel.cs" />
     <Compile Include="MappingMaster\RolePrivilegeModel.cs" />
@@ -100,6 +99,7 @@
     <Compile Include="Patient\PatientClinicModel.cs" />
     <Compile Include="PoliSchedule\PoliScheduleMasterModel.cs" />
     <Compile Include="PoliSchedule\PoliScheduleModel.cs" />
+    <Compile Include="PreExamine\PreExamineModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Loket\LoketModel.cs" />
   </ItemGroup>
