--- a/Klinik.Entities/Klinik.Entities.csproj
+++ b/Klinik.Entities/Klinik.Entities.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Patient\PatientClinicModel.cs" />
     <Compile Include="PoliSchedule\PoliScheduleMasterModel.cs" />
     <Compile Include="PoliSchedule\PoliScheduleModel.cs" />
+    <Compile Include="Poli\PatientListModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Loket\LoketModel.cs" />
   </ItemGroup>
