--- a/Klinik.Features/Klinik.Features.csproj
+++ b/Klinik.Features/Klinik.Features.csproj
@@ -115,6 +115,9 @@
     <Compile Include="MasterData\Organization\OrganizationResponse.cs" />
     <Compile Include="MasterData\Organization\OrganizationValidator.cs" />
     <Compile Include="MasterData\Poli\PoliHandler.cs" />
+    <Compile Include="MasterData\Poli\PoliRequest.cs" />
+    <Compile Include="MasterData\Poli\PoliResponse.cs" />
+    <Compile Include="MasterData\Poli\PoliValidator.cs" />
     <Compile Include="MasterData\Privileges\PrivilegeHandler.cs" />
     <Compile Include="MasterData\Privileges\PrivilegeRequest.cs" />
     <Compile Include="MasterData\Privileges\PrivilegeResponse.cs" />
