--- a/Klinik.Web/Klinik.Web.csproj
+++ b/Klinik.Web/Klinik.Web.csproj
@@ -1411,6 +1411,7 @@
     <Content Include="Views\Shared\MvcDatalist\_Dialog.cshtml" />
     <Content Include="Views\PreExamine\ListQueue.cshtml" />
     <Content Include="Views\PreExamine\CreateOrEditPreExamine.cshtml" />
+    <Content Include="Views\MasterData\PoliList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
