--- a/Klinik.Web/Klinik.Web.csproj
+++ b/Klinik.Web/Klinik.Web.csproj
@@ -519,6 +519,8 @@
     <Content Include="Content\Octopus\assets\vendor\bootstrap-datepicker\js\locales\bootstrap-datepicker.vi.js" />
     <Content Include="Content\Octopus\assets\vendor\bootstrap-datepicker\js\locales\bootstrap-datepicker.zh-CN.js" />
     <Content Include="Content\Octopus\assets\vendor\bootstrap-datepicker\js\locales\bootstrap-datepicker.zh-TW.js" />
+    <Content Include="Content\Octopus\assets\vendor\bootstrap-fileupload\bootstrap-fileupload.min.css" />
+    <Content Include="Content\Octopus\assets\vendor\bootstrap-fileupload\bootstrap-fileupload.min.js" />
     <Content Include="Content\Octopus\assets\vendor\bootstrap-multiselect\bootstrap-multiselect.css" />
     <Content Include="Content\Octopus\assets\vendor\bootstrap-multiselect\bootstrap-multiselect.js" />
     <Content Include="Content\Octopus\assets\vendor\bootstrap-wizard\jquery.bootstrap.wizard.js" />
@@ -1057,6 +1059,8 @@
     <Content Include="Content\Octopus\assets\vendor\jquery-validation\jquery.validate.min.js" />
     <Content Include="Content\Octopus\assets\vendor\jquery\jquery.js" />
     <Content Include="Content\Octopus\assets\vendor\jquery\jquery.min.js" />
+    <Content Include="Content\Octopus\assets\vendor\magnific-popup\magnific-popup.css" />
+    <Content Include="Content\Octopus\assets\vendor\magnific-popup\magnific-popup.js" />
     <Content Include="Content\Octopus\assets\vendor\Modernizr\modernizr.js" />
     <Content Include="Content\Octopus\assets\vendor\nanoscroller\nanoscroller.css" />
     <Content Include="Content\Octopus\assets\vendor\nanoscroller\nanoscroller.js" />
@@ -1117,6 +1121,11 @@
     <Content Include="Scripts\jquery.signalR-2.4.0.js" />
     <Content Include="Scripts\jquery.signalR-2.4.0.min.js" />
     <Content Include="Scripts\jquery.timepicker.js" />
+    <Content Include="Scripts\medica\service.datatables.editable.js" />
+    <Content Include="Scripts\medica\radiologi.datatables.editable.js" />
+    <Content Include="Scripts\medica\lab.datatables.editable.js" />
+    <Content Include="Scripts\medica\injection.datatables.editable.js" />
+    <Content Include="Scripts\medica\medicine.datatables.editable.js" />
     <Content Include="Scripts\MvcDatalist\mvc-datalist.js" />
     <Content Include="Scripts\MvcDatalist\mvc-datalist.min.js" />
     <Content Include="Scripts\toastr.js" />
