--- a/Klinik.Web/Klinik.Web.csproj
+++ b/Klinik.Web/Klinik.Web.csproj
@@ -1121,11 +1121,9 @@
     <Content Include="Scripts\jquery.signalR-2.4.0.js" />
     <Content Include="Scripts\jquery.signalR-2.4.0.min.js" />
     <Content Include="Scripts\jquery.timepicker.js" />
-    <Content Include="Scripts\medica\service.datatables.editable.js" />
-    <Content Include="Scripts\medica\radiologi.datatables.editable.js" />
-    <Content Include="Scripts\medica\lab.datatables.editable.js" />
-    <Content Include="Scripts\medica\injection.datatables.editable.js" />
-    <Content Include="Scripts\medica\medicine.datatables.editable.js" />
+    <Content Include="Scripts\medica\jquery-1.10.2.js" />
+    <Content Include="Scripts\medica\jquery-ui.css" />
+    <Content Include="Scripts\medica\jquery-ui.js" />
     <Content Include="Scripts\MvcDatalist\mvc-datalist.js" />
     <Content Include="Scripts\MvcDatalist\mvc-datalist.min.js" />
     <Content Include="Scripts\toastr.js" />
