Added Product, Product Category, Medicine, Lab Item, Lab Item Category and Product Unit back end

--- a/Klinik.Features/Klinik.Features.csproj
+++ b/Klinik.Features/Klinik.Features.csproj
@@ -113,7 +113,14 @@
     <Compile Include="MasterData\Employee\EmployeeValidator.cs" />
     <Compile Include="MasterData\FamilyRelationship\FamilyStatusHandler.cs" />
     <Compile Include="MasterData\GeneralMaster\MasterHandler.cs" />
+    <Compile Include="MasterData\LabItemCategory\LabItemCategoryHandler.cs" />
+    <Compile Include="MasterData\LabItemCategory\LabItemCategoryRequest.cs" />
+    <Compile Include="MasterData\LabItemCategory\LabItemCategoryResponse.cs" />
+    <Compile Include="MasterData\LabItemCategory\LabItemCategoryValidator.cs" />
     <Compile Include="MasterData\Menu\MenuHandler.cs" />
+    <Compile Include="MasterData\Menu\MenuRequest.cs" />
+    <Compile Include="MasterData\Menu\MenuResponse.cs" />
+    <Compile Include="MasterData\Menu\MenuValidator.cs" />
     <Compile Include="MasterData\Organization\OrganizationHandler.cs" />
     <Compile Include="MasterData\Organization\OrganizationRequest.cs" />
     <Compile Include="MasterData\Organization\OrganizationResponse.cs" />
@@ -126,6 +133,30 @@
     <Compile Include="MasterData\Privileges\PrivilegeRequest.cs" />
     <Compile Include="MasterData\Privileges\PrivilegeResponse.cs" />
     <Compile Include="MasterData\Privileges\PrivilegeValidator.cs" />
+    <Compile Include="MasterData\Medicine\MedicineHandler.cs" />
+    <Compile Include="MasterData\Medicine\MedicineRequest.cs" />
+    <Compile Include="MasterData\Medicine\MedicineResponse.cs" />
+    <Compile Include="MasterData\Medicine\MedicineValidator.cs" />
+    <Compile Include="MasterData\LabItem\LabItemHandler.cs" />
+    <Compile Include="MasterData\LabItem\LabItemRequest.cs" />
+    <Compile Include="MasterData\LabItem\LabItemResponse.cs" />
+    <Compile Include="MasterData\LabItem\LabItemValidator.cs" />
+    <Compile Include="MasterData\ProductMedicine\ProductMedicineHandler.cs" />
+    <Compile Include="MasterData\ProductMedicine\ProductMedicineRequest.cs" />
+    <Compile Include="MasterData\ProductMedicine\ProductMedicineResponse.cs" />
+    <Compile Include="MasterData\ProductMedicine\ProductMedicineValidator.cs" />
+    <Compile Include="MasterData\ProductUnit\ProductUnitHandler.cs" />
+    <Compile Include="MasterData\ProductUnit\ProductUnitRequest.cs" />
+    <Compile Include="MasterData\ProductUnit\ProductUnitResponse.cs" />
+    <Compile Include="MasterData\ProductUnit\ProductUnitValidator.cs" />
+    <Compile Include="MasterData\ProductCategory\ProductCategoryHandler.cs" />
+    <Compile Include="MasterData\ProductCategory\ProductCategoryRequest.cs" />
+    <Compile Include="MasterData\ProductCategory\ProductCategoryResponse.cs" />
+    <Compile Include="MasterData\ProductCategory\ProductCategoryValidator.cs" />
+    <Compile Include="MasterData\Product\ProductHandler.cs" />
+    <Compile Include="MasterData\Product\ProductRequest.cs" />
+    <Compile Include="MasterData\Product\ProductResponse.cs" />
+    <Compile Include="MasterData\Product\ProductValidator.cs" />
     <Compile Include="MasterData\Roles\RoleHandler.cs" />
     <Compile Include="MasterData\Roles\RoleRequest.cs" />
     <Compile Include="MasterData\Roles\RoleResponse.cs" />
