--- a/Klinik.Entities/Klinik.Entities.csproj
+++ b/Klinik.Entities/Klinik.Entities.csproj
@@ -89,12 +89,19 @@
     <Compile Include="MasterData\EmployeeModel.cs" />
     <Compile Include="MasterData\EmployeeStatusModel.cs" />
     <Compile Include="MasterData\FamilyRelationshipModel.cs" />
+    <Compile Include="MasterData\LabItemCategoryModel.cs" />
+    <Compile Include="MasterData\LabItemModel.cs" />
+    <Compile Include="MasterData\MedicineModel.cs" />
     <Compile Include="MasterData\MenuModel.cs" />
     <Compile Include="MasterData\OrganizationModel.cs" />
     <Compile Include="MasterData\PatientModel.cs" />
     <Compile Include="MasterData\PoliFlowTemplateModel.cs" />
     <Compile Include="MasterData\PoliModel.cs" />
     <Compile Include="MasterData\PrivilegeModel.cs" />
+    <Compile Include="MasterData\ProductCategoryModel.cs" />
+    <Compile Include="MasterData\ProductMedicineModel.cs" />
+    <Compile Include="MasterData\ProductModel.cs" />
+    <Compile Include="MasterData\ProductUnitModel.cs" />
     <Compile Include="MasterData\RoleModel.cs" />
     <Compile Include="MasterData\UserModel.cs" />
     <Compile Include="Patient\PatientClinicModel.cs" />
