Updated form examine

--- a/Klinik.Common/Klinik.Common.csproj
+++ b/Klinik.Common/Klinik.Common.csproj
@@ -102,6 +102,10 @@
       <Project>{0a81b9b4-7d64-412d-8e86-8ae9d22cf53f}</Project>
       <Name>Klinik.Entities</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Klinik.Resources\Klinik.Resources.csproj">
+      <Project>{3D1A8222-CC25-4BB0-8820-F26C53AA9E8D}</Project>
+      <Name>Klinik.Resources</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
